// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformers/script/transformers transformScript 1`] = `
Object {
  "map": Object {
    "file": "test.vue.script.transformed.ts",
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA",
    "names": Array [],
    "sources": Array [
      "test.vue.script.ts",
    ],
    "sourcesContent": Array [
      "
import { ref, defineComponent } from 'vue'
import HelloWorld from './HelloWorld.vue'

export default defineComponent({
  components: {
    HelloWorld
  },
  setup(props) {
    const count = ref(0)
    const inc = () => {
      count.value++
    }
    console.log(count.value.length)

    return {
      count,
      inc
    }
  }
})
    ",
    ],
    "version": 3,
  },
  "transformed": "
import { ref, defineComponent } from 'vue'
import HelloWorld from './HelloWorld.vue'

const __Component = defineComponent({
  components: {
    HelloWorld
  },
  setup(props) {
    const count = ref(0)
    const inc = () => {
      count.value++
    }
    console.log(count.value.length)

    return {
      count,
      inc
    }
  }
})
    ",
}
`;

exports[`transformers/script/transformers transformScript 2`] = `
Object {
  "map": Object {
    "file": "test.vue.script.transformed.ts",
    "mappings": "AAAA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA;AACA",
    "names": Array [],
    "sources": Array [
      "test.vue.script.ts",
    ],
    "sourcesContent": Array [
      "
import { defineComponent } from 'vue'

export default defineComponent({
  props: {
    msg: {
      type: String,
      required: true
    }
  }
})
    ",
    ],
    "version": 3,
  },
  "transformed": "
import { defineComponent } from 'vue'

const __Component = defineComponent({
  props: {
    msg: {
      type: String,
      required: true
    }
  }
})
    ",
}
`;
